@@ -27,7 +27,6 @@ import org.ethereum.beacon.discovery.DiscoverySystemBuilder;
 import org.ethereum.beacon.discovery.schema.EnrField;
 import org.ethereum.beacon.discovery.schema.NodeRecord;
 import org.ethereum.beacon.discovery.schema.NodeRecordBuilder;
-import org.ethereum.beacon.discovery.storage.NewAddressHandler;
 import org.hyperledger.besu.plugin.services.MetricsSystem;
 import tech.pegasys.teku.infrastructure.async.AsyncRunner;
 import tech.pegasys.teku.infrastructure.async.Cancellable;
@@ -61,18 +60,6 @@ public class Discv5Service extends Service implements Discv5Client {
         networkInterfaces.size() == 1 || networkInterfaces.size() == 2,
         "The configured network interfaces must be either 1 or 2");
 
-    if (networkInterfaces.size() == 1) {
-      final String listenAddress = networkInterfaces.getFirst();
-      discoverySystemBuilder.listen(listenAddress, discoveryConfig.getListenUDPPortIpv4());
-      this.supportsIpv6 =
-          IPVersionResolver.resolve(listenAddress) == IPVersionResolver.IPVersion.IP_V6;
-    } else {
-      final InetSocketAddress[] listenAddresses =
-          getDualStackNetworkInterfaces(discoverySystemBuilder, networkInterfaces, discoveryConfig);
-      discoverySystemBuilder.listen(listenAddresses);
-      this.supportsIpv6 = true;
-    }
-
     final UInt64 seqNo = UInt64.ZERO.add(1);
     final NodeRecordBuilder nodeRecordBuilder =
         new NodeRecordBuilder()
@@ -80,8 +67,17 @@ public class Discv5Service extends Service implements Discv5Client {
             .seq(seqNo)
             .customField(discoveryConfig.getClientKey(), discoveryConfig.getClientValue());
 
-    final NewAddressHandler maybeUpdateNodeRecordHandler =
-        maybeUpdateNodeRecord(discoveryConfig, secretKey);
+    if (networkInterfaces.size() == 1) {
+      final String listenAddress = networkInterfaces.getFirst();
+      discoverySystemBuilder.listen(listenAddress, discoveryConfig.getListenUDPPortIpv4());
+      this.supportsIpv6 =
+          IPVersionResolver.resolve(listenAddress) == IPVersionResolver.IPVersion.IP_V6;
+    } else {
+      final InetSocketAddress[] listenAddresses =
+          discoveryConfig.getDualStackListenNetworkInterfaces(networkInterfaces);
+      discoverySystemBuilder.listen(listenAddresses);
+      this.supportsIpv6 = true;
+    }
 
     if (discoveryConfig.hasUserExplicitlySetAdvertisedIps()) {
       final List<String> advertisedIps = discoveryConfig.getAdvertisedIps();
@@ -90,26 +86,34 @@ public class Discv5Service extends Service implements Discv5Client {
           "The configured advertised IPs must be either 1 or 2");
       if (advertisedIps.size() == 1) {
         nodeRecordBuilder.address(
-            advertisedIps.get(0),
+            advertisedIps.getFirst(),
             discoveryConfig.getAdvertisedUDPPortIpv4(),
             discoveryConfig.getAdvertisedTCPPortIpv4());
       } else {
         // IPv4 and IPv6 (dual-stack)
         advertisedIps.forEach(
-            advertisedIp -> {
-              final IPVersionResolver.IPVersion ipVersion = IPVersionResolver.resolve(advertisedIp);
-              final int advertisedUdpPort =
-                  switch (ipVersion) {
-                    case IP_V4 -> discoveryConfig.getAdvertisedUDPPortIpv4();
-                    case IP_V6 -> discoveryConfig.getAdvertisedUDPPortIpv6();
-                  };
-              final int advertisedTcpPort =
-                  switch (ipVersion) {
-                    case IP_V4 -> discoveryConfig.getAdvertisedTCPPortIpv4();
-                    case IP_V6 -> discoveryConfig.getAdvertisedTCPPortIpv6();
-                  };
-              nodeRecordBuilder.address(advertisedIp, advertisedUdpPort, advertisedTcpPort);
-            });
+            advertisedIp ->
+                nodeRecordBuilder.address(
+                    advertisedIp,
+                    discoveryConfig.getAdvertisedUDPPort(advertisedIp),
+                    discoveryConfig.getAdvertisedTCPPort(advertisedIp)));
+      }
+    } else {
+      if (networkInterfaces.size() == 1) {
+        final String listenAddress = networkInterfaces.getFirst();
+        nodeRecordBuilder.address(
+            listenAddress,
+            discoveryConfig.getListenUDPPortIpv4(),
+            discoveryConfig.getListenTCPPortIpv4());
+      } else {
+        discoveryConfig
+            .getIps()
+            .forEach(
+                ip ->
+                    nodeRecordBuilder.address(
+                        ip,
+                        discoveryConfig.getListenUDPPort(ip),
+                        discoveryConfig.getListenTCPPort(ip)));
       }
     }
 
@@ -118,7 +122,6 @@ public class Discv5Service extends Service implements Discv5Client {
             .secretKey(secretKey)
             .bootnodes(discoveryConfig.getBootnodes())
             .localNodeRecord(nodeRecordBuilder.build())
-            .newAddressHandler(maybeUpdateNodeRecordHandler)
             .localNodeRecordListener(this::createLocalNodeRecordListener)
             .talkHandler(incomingRequestTalkHandler)
             .addressAccessPolicy(AddressAccessPolicy.ALLOW_ALL) // TODO check this.
@@ -230,45 +233,5 @@ public class Discv5Service extends Service implements Discv5Client {
           MultiaddrUtil.getMultiAddrValue(multiaddr, Protocol.TCP));
     }
     return this.getHomeNodeRecord();
-  }
-
-  private InetSocketAddress[] getDualStackNetworkInterfaces(
-      final DiscoverySystemBuilder discoverySystemBuilder,
-      final List<String> networkInterfaces,
-      final DiscoveryConfig discoveryConfig) {
-    return networkInterfaces.stream()
-        .map(
-            networkInterface -> {
-              final int listenUdpPort =
-                  switch (IPVersionResolver.resolve(networkInterface)) {
-                    case IP_V4 -> discoveryConfig.getListenUDPPortIpv4();
-                    case IP_V6 -> discoveryConfig.getListenUDPPortIpv6();
-                  };
-              return new InetSocketAddress(networkInterface, listenUdpPort);
-            })
-        .toArray(InetSocketAddress[]::new);
-  }
-
-  private NewAddressHandler maybeUpdateNodeRecord(
-      final DiscoveryConfig discoveryConfig, SECP256K1.SecretKey secretKey) {
-    if (discoveryConfig.hasUserExplicitlySetAdvertisedIps()) {
-      return (oldRecord, newAddress) -> Optional.of(oldRecord);
-    } else {
-      return (oldRecord, newAddress) -> {
-        final int newTcpPort;
-        if (discoveryConfig.getNetworkInterfaces().size() == 1) {
-          newTcpPort = discoveryConfig.getAdvertisedTCPPortIpv4();
-        } else {
-          // IPv4 and IPv6 (dual-stack)
-          newTcpPort =
-              switch (IPVersionResolver.resolve(newAddress)) {
-                case IP_V4 -> discoveryConfig.getAdvertisedTCPPortIpv4();
-                case IP_V6 -> discoveryConfig.getAdvertisedTCPPortIpv6();
-              };
-        }
-        return Optional.of(
-            oldRecord.withNewAddress(newAddress, Optional.of(newTcpPort), secretKey));
-      };
-    }
   }
 }
